skemmdur feedback api, provide feedback() breytt frá static